Added configuration to set multiple user defined username and password.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.application.name=jwt-example
 server.port=9090
 
-spring.security.user.name=amit
-spring.security.user.password=admin
+#spring.security.user.name=amit
+#spring.security.user.password=admin
